OCW-743b #comment remove references to modernizr, no longer using, suppress play button on iOS devices

--- a/core/static/css/_features.scss
+++ b/core/static/css/_features.scss
@@ -288,3 +288,6 @@
   margin: auto;
 }
 
+video::-webkit-media-controls {
+    display:none !important;
+}
